--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Education Tool</title>
+    <title>AI Study Tool</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="canonical" href="https://www.example.com" />
+    
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/research.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/research.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div id="root"></div>
